# ChatTB

./: .env  .gitignore  AssumerSFT.py  AssumerSFT.sh  AssumerSFTTest_APIgenerateSQL.sh  AssumerSFTTest_LocalModelSQL.py  AssumerSFTTest_LocalModelSQL.sh  AssumerSFTTest_Loss.py  AssumerSFTTest_Loss.sh  AssumerSFT_Zero3.sh  BackDocProcess.py  BackDocScrap.py  ChatTB.drawio  ChatTB.iodraw  ChatTB.iodrow  LSH.py  MCPclient.py  MCPclient_fetchDocument.py  MCPserver.py  MCPserver_docReceive.py  MCPserver_schemaAnalyze.py  MCPserver_wikiSearch.py  SFT_COMPARISON_TEST_README.md  analyzeTable.py  batch_test_model.py  bird_dev_test_results1.json  condense_DefinitionalRules.py  dataScraper.py  finetune_qwen3.py  generated_rules.json.backup_20251005_021209  generator_base_experiment.py  generator_experiment_ArcticAligned.py  generator_experiment_rules.py  generator_sql2plan.py  getRules.py  getRulesDocument.py  getSchema.py  prompt.txt  prompt_fetchCleanDocument.md  prompt_schemaAnalyze_V1.md  (+20 more)
Bird_dev/: EXP_base_Qwen30B_rules7.6.json  EXP_base_Qwen4B_norules_ac10.2.json  EXP_base_Qwen4B_rules_ac7.0.json  EXP_deepseek_rules_92.json  dev.json  dev_res_withFlaw.json  dev_wSQLres.json  part_1.json  part_2.json  part_3.json  part_4.json  res.json  rules.json  schema.json  tokenizedDB.json
Bird_train/: EXP_sql2plan_models--Qwen3-8B.json  part_1.json  part_2.json  part_3.json  part_4.json  speciall_caught.json  tokenizedDB.json  train_schema.json
Generator/: GeneratorInference.py  GeneratorInference_API.py  GeneratorInference_local.py  Tools.py  test_interactive_tools.py
GlobalAssumer/: GlobalAssumerInference.py  GlobalAssumerInference.sh  GlobalAssumerInferenceFixing.py  GlobalAssumerMimicSFT.py  GlobalAssumerSFT.py  GlobalAssumerSFT.sh  GlobalAssumerSFTTest_APIgenerateSQL.py  GlobalAssumerSFTTest_LocalModelSQL.py  GlobalAssumerSFTTest_LocalModelSQL.sh  GlobalAssumerSFTTest_LocalModelSQL_SFTonly.py  GlobalAssumerSFTTest_Loss.sh  GlobalAssumerSFTTest_Loss_SFTonly.py  GlobalAssumerSFT_Zero3.py  GlobalAssumerSFT_ds.py  GlobalAssumerSFT_ds.sh  GlobalAssumerSFT_ds_config.json  GlobalAssumerSFT_lossTweaked.py  ds_config_zero3.json
Model/: reference.py
Modules/: GlobalAssumerDataloader.py  RulesGenerator.py  (+1 more)
(+129 files in other folders)
