[project]
name = "chattb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "beautifulsoup4>=4.13.4",
    "bitsandbytes",
    "chromadb>=1.0.15",
    "deepspeed>=0.17.6",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "func-timeout>=4.3.5",
    "ipykernel>=6.30.0",
    "ipynb>=0.5.1",
    "jieba>=0.42.1",
    "matplotlib>=3.10.6",
    "mcp[client]>=1.11.0",
    "modelscope>=1.30.0",
    "numpy>=2.3.1",
    "openai>=1.96.1",
    "pandas>=2.3.1",
    "peft>=0.17.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "selenium>=4.34.2",
    "sentence-transformers>=5.0.0",
    "sqlparse>=0.5.3",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "trl>=0.23.0",
    "typing>=3.10.0.0",
    "webdriver-manager>=4.0.2",
    "wikipedia>=1.4.0",
    "wikipedia-api>=0.8.1",
]
